Release the correct pointer in implementations of SetOutputErrorBehavior. Bug 295145, patch by Frank Wein <bugzilla@mcsmurf.de>, r=jshin, sr=dbaron