intl/uconv/ucvko/nsUnicodeToJamoTTF.cpp
@@ -168,9 +168,9 @@ nsUnicodeToJamoTTF::SetOutputErrorBehavior(PRInt32 aBehavior,
 {
   if (aBehavior == kOnError_CallBack && aEncoder == nsnull)
     return NS_ERROR_NULL_POINTER;
-  NS_IF_RELEASE(aEncoder);
+  NS_IF_RELEASE(mErrEncoder);
   mErrEncoder = aEncoder;
-  NS_IF_ADDREF(aEncoder);
+  NS_IF_ADDREF(mErrEncoder);
   
   mErrBehavior = aBehavior;
   mErrChar = aChar;
