intl/uconv/util/nsUCSupport.cpp
@@ -571,12 +571,12 @@ NS_IMETHODIMP nsEncoderSupport::SetOutputErrorBehavior(
                                 nsIUnicharEncoder * aEncoder, 
                                 PRUnichar aChar)
 {
-  if ((aBehavior == kOnError_CallBack) && (aEncoder == NULL)) 
+  if (aBehavior == kOnError_CallBack && aEncoder == nsnull) 
     return NS_ERROR_NULL_POINTER;
 
-  NS_IF_RELEASE(aEncoder);
+  NS_IF_RELEASE(mErrEncoder);
   mErrEncoder = aEncoder;
-  NS_IF_ADDREF(aEncoder);
+  NS_IF_ADDREF(mErrEncoder);
 
   mErrBehavior = aBehavior;
   mErrChar = aChar;
